[project]
name = "crash_locator"
version = "0.1.0"
description = "Crash Locator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beartype>=0.20.2",
    "dotenv>=0.9.9",
    "openai>=1.75.0",
    "pydantic>=2.11.3",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "tree-sitter>=0.24.0",
    "tree-sitter-java>=0.23.5",
]
